--- a/androidWheelPicker/AndroidManifest.xml
+++ b/androidWheelPicker/AndroidManifest.xml
@@ -1,14 +1,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="de.mindyourbyte.androidwheelspinner"
+    package="de.mindyourbyte.wheelpicker"
     android:versionCode="1"
     android:versionName="1.0">
 
     <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="15" />
 
     <application android:label="@string/app_name"
-        android:icon="@drawable/ic_launcher"
-        android:theme="@style/AppTheme" android:description="@string/app_name">
-        <activity android:name="TestActivity">
+        android:description="@string/app_name">
+        <activity android:name="de.mindyourbyte.androidwheelspinner.TestActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
